<resources>
    <string name="app_name">Figma Daniel</string>
    <string name="version_1_1">Version 1.1</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="di_aplikasi_perhitungan_gizi_silahkan_masuk_terlebih_dahulu">Di aplikasi perhitungan gizi, silahkan masuk terlebih dahulu</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="lupa_kata_sandi">Lupa Kata Sandi</string>
    <string name="login">Login</string>
    <string name="alternatif_login">Alternatif Login</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="register">Register</string>
    <string name="masukan_email_yang_terdaftar_diaplikasi_ya_kami_infokan_sandi_melalui_email">Masukan email yang terdaftar diaplikasi ya, kami infokan sandi melalui email</string>
    <string name="kirim">Kirim</string>
    <string name="baru_bergabung">Baru Bergabung?</string>
    <string name="lengkapi_data_dibawah_ini_untuk_bergabung_bersama_kami">Lengkapi data dibawah ini untuk bergabung bersama kami</string>
    <string name="nama">Nama</string>
    <string name="no_telpon">No. Telpon</string>
    <string name="kata_sandi_harus_min_8_karakter_dengan_min_1_angka">Kata sandi harus min 8 karakter dengan min 1 angka</string>
    <string name="info">Info</string>
    <string name="daftar">Daftar</string>
    <string name="sudah_bergabung">Sudah Bergabung?</string>
    <string name="google_login">Google Login</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_login">Facebook Login</string>
    <string name="email_berhasil_terkirim">Email Berhasil Terkirim</string>
    <string name="cek_email_untuk_informasi_kata_sandi_akunmu">Cek Email untuk informasi kata sandi akunmu</string>
    <string name="bahan_pangan">Bahan Pangan</string>
    <string name="gizi_individu">Gizi Individu</string>
    <string name="gizi_populasi">Gizi Populasi</string>
    <string name="profil">Profil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="perhitungan_gizi_individu">Perhitungan Gizi Individu</string>
    <string name="search">Search</string>
    <string name="belum_ada_data_individu">Belum ada data individu</string>
    <string name="tambahkan_data_individu_terlebih_dahulu_ya">Tambahkan data individu terlebih dahulu ya</string>
    <string name="individu">+ Individu</string>
    <string name="belum_ada_data_populasi">Belum ada data populasi</string>
    <string name="tambahkan_data_kelompok_popluasi_terlebih_dahulu_ya">Tambahkan data kelompok popluasi terlebih dahulu ya</string>
    <string name="populasi">+ Populasi</string>
    <string name="hi">Hi,</string>
    <string name="daniel_aquaries">Daniel Aquaries</string>
    <string name="member">Member</string>
    <string name="anggota_tkpi">Anggota TKPI</string>
    <string name="danielaquaries_gmail_com">danielaquaries@gmail.com</string>
    <string name="_084639576482">084639576482</string>
    <string name="download">Download</string>
    <string name="pedoman_aplikasi">Pedoman Aplikasi</string>
    <string name="keluar_akun">Keluar Akun</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="daftar_usulan">Daftar Usulan</string>
    <string name="daftar_bahan_pangan">Daftar Bahan Pangan</string>
    <string name="_1_2_step">1/2 Step</string>
    <string name="informasi_individu">Informasi Individu</string>
    <string name="wilayah">Wilayah</string>
    <string name="provinsi">Provinsi</string>
    <string name="kabupaten_kota">Kabupaten/Kota</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="kelurahan_desa">Kelurahan/Desa</string>
    <string name="lanjut_step_2">Lanjut Step 2</string>
    <string name="batal">Batal</string>
    <string name="biodata">Biodata</string>
    <string name="_2_2_step">2/2 Step</string>
    <string name="back">Back</string>
    <string name="usia">Usia</string>
    <string name="bulan_tahun">Bulan/Tahun</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="perempuan">Perempuan</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="kondisi_fisik">Kondisi Fisik</string>
    <string name="tidak_hamil">Tidak Hamil</string>
    <string name="hamil">Hamil</string>
    <string name="menyusui">Menyusui</string>
    <string name="trimester_hamil">Trimester Hamil</string>
    <string name="kesehatan">Kesehatan</string>
    <string name="sakit">Sakit</string>
    <string name="tidak_sakit">Tidak Sakit</string>
    <string name="berat_badan">Berat Badan</string>
    <string name="kg">Kg</string>
    <string name="tinggi_badan">Tinggi Badan</string>
    <string name="cm">Cm</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="status_aktivitas">Status Aktivitas</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="tambah_data_populasi">Tambah Data Populasi</string>
    <string name="nama_populasi">Nama Populasi</string>
    <string name="tambahkan">Tambahkan</string>
    <string name="anda_akan_keluar_dari_akun_ini_lanjutkan">Anda akan keluar dari akun ini, lanjutkan?</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="foto">Foto</string>
    <string name="ukuran_foto_maksimal_10_mb">Ukuran foto maksimal 10 Mb</string>
    <string name="simpan">Simpan</string>
    <string name="edit_kata_sandi">Edit Kata Sandi</string>
    <string name="kata_sandi_lama">Kata Sandi Lama</string>
    <string name="konfirmasi_kata_sandi_baru">Konfirmasi Kata Sandi Baru</string>
    <string name="kata_sandi_baru">Kata Sandi Baru</string>
    <string name="belum_ada_usulan_terkait_bahan_pangan">Belum ada usulan terkait bahan pangan</string>
    <string name="jika_anda_memiliki_usulan_langsung_saja_usulkan">Jika anda memiliki usulan langsung saja usulkan!</string>
    <string name="usulkan_bahan_pangan">Usulkan Bahan Pangan</string>
    <string name="nama_bahan_pangan">Nama Bahan Pangan</string>
    <string name="bdd">BDD</string>
    <string name="persentase">%</string>
    <string name="faktor_konfeksi">Faktor Konfeksi</string>

    <string-array name="spinner_provinsi">
        <item>Jawa Tengah</item>
        <item>Jawa Barat</item>
        <item>Jawa Timur</item>
        <item>Sumatera Barat</item>
        <item>Sumatera Utara</item>
        <item>Sumatera Selatan</item>
        <item>Papua Barat</item>
    </string-array>

    <string-array name="spinner_kabupaten_kota">
        <item>Semarang</item>
        <item>Banda Aceh</item>
        <item>Jakarta</item>
        <item>Bandung</item>
        <item>Surabaya</item>
        <item>Medan</item>
        <item>Sabang</item>
    </string-array>

    <string-array name="spinner_kecamatan">
        <item>Kecamatan Ungaran Barat</item>
        <item>Kecamatan Ungaran Timur</item>
        <item>Kecamatan Tembalang</item>
        <item>Kecamatan Semarang Utara</item>
        <item>Kecamatan Semarang Utara</item>
        <item>Kecamatan Semarang Tengah</item>
        <item>Kecamatan Tuntang</item>
    </string-array>

    <string-array name="spinner_lurah_desa">
        <item>Desa Lerep</item>
        <item>Lurah Sendangmulyo Semarang</item>
        <item>Lurah Muktiharjo Kidul</item>
        <item>Lurah Kalisari Sayung</item>
        <item>Lurah Wonodri Semarang</item>
        <item>Lurah Sambiroto Semarang</item>
        <item>Lurah Helvetia Timur</item>
    </string-array>

    <string-array name="spinner_status_aktivitas">
        <item>Aktif</item>
        <item>Pasif</item>
        <item>Tidak Aktif</item>
    </string-array>

</resources>