<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProfilFragment">

    <TextView
        android:id="@+id/textProfilProfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_17sdp"
        android:text="@string/profil"
        android:textAlignment="textStart"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivProfilProfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_17sdp"
        android:contentDescription="@string/profil"
        android:src="@drawable/ic_placeholder_profile_mdpi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textProfilProfil" />

    <TextView
        android:id="@+id/textHiProfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_22sdp"
        android:text="@string/hi"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_17ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/ivProfilProfil"
        app:layout_constraintTop_toBottomOf="@id/textProfilProfil" />

    <TextView
        android:id="@+id/textNameProfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_22sdp"
        android:text="@string/daniel_aquaries"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_17ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/textHiProfil"
        app:layout_constraintTop_toBottomOf="@id/textProfilProfil" />

    <LinearLayout
        android:id="@+id/linearMemberProfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@id/ivProfilProfil"
        app:layout_constraintTop_toBottomOf="@id/textHiProfil">

        <ImageView
            android:id="@+id/ivLogoAnggotaProfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/member"
            android:src="@drawable/ic_anggota_mdpi" />

        <TextView
            android:id="@+id/textMemberProfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/anggota_tkpi"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearEmailProfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:orientation="vertical"
        android:padding="@dimen/_17sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivProfilProfil">

        <TextView
            android:id="@+id/textEmailProfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_13ssp" />

        <TextView
            android:id="@+id/textEmailMemberProfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/danielaquaries_gmail_com"
            android:textColor="@color/colorBlack" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearNoTelponProfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_17sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearEmailProfil">

        <TextView
            android:id="@+id/textTelponProfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_telpon"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_13ssp" />

        <TextView
            android:id="@+id/textTelponMemberProfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/_084639576482"
            android:textColor="@color/colorBlack" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearDownloadProfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_17sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearNoTelponProfil">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/download"
            android:src="@drawable/ic_download_mdpi" />

        <TextView
            android:id="@+id/textPedomanAplikasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/pedoman_aplikasi"
            android:textColor="@color/colorBlue"
            android:textStyle="italic" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonLogoutProfil"
        android:layout_width="@dimen/_125sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_17sdp"
        android:layout_marginTop="@dimen/_17sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_50sdp"
        android:background="@drawable/background_button_1"
        android:text="@string/keluar_akun"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonEditProfilProfil"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonEditProfilProfil"
        android:layout_width="@dimen/_125sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_17sdp"
        android:layout_marginEnd="@dimen/_17sdp"
        android:layout_marginBottom="@dimen/_50sdp"
        android:background="@drawable/custom_background_edit_text"
        android:text="@string/edit_profil"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonLogoutProfil" />

</androidx.constraintlayout.widget.ConstraintLayout>