<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_bottomsheet"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/alternatif_login"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearButtonGoogleLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/_24sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingRight="@dimen/_24sdp"
        android:paddingBottom="@dimen/_10sdp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/google_login"
            android:src="@drawable/ic_login_google_mdpi" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_13sdp"
            android:text="@string/google"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_14ssp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearButtonFacebookLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/_24sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingRight="@dimen/_24sdp"
        android:paddingBottom="@dimen/_10sdp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/facebook_login"
            android:src="@drawable/ic_login_fb_mdpi" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_13sdp"
            android:text="@string/facebook"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_14ssp" />

    </LinearLayout>

</LinearLayout>