<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_bottomsheet">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/keluar_akun"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/anda_akan_keluar_dari_akun_ini_lanjutkan"
        android:textAlignment="center"
        android:paddingRight="@dimen/_24sdp"
        android:paddingLeft="@dimen/_24sdp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:paddingRight="@dimen/_17sdp"
        android:paddingLeft="@dimen/_17sdp">


        <Button
            android:id="@+id/buttonBatalKeluarAkun"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_17sdp"
            android:layout_marginBottom="@dimen/_17sdp"
            android:layout_weight="1"
            android:background="@drawable/custom_background_edit_text"
            android:text="@string/batal"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack" />

        <Button
            android:id="@+id/buttonLanjutkanKeluarAkun"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_17sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginBottom="@dimen/_17sdp"
            android:layout_weight="1"
            android:background="@drawable/background_button_1"
            android:text="@string/lanjutkan"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

</LinearLayout>