<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditPasswordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_17sdp">

            <ImageView
                android:id="@+id/ivBackEditPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back_mdpi" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/edit_kata_sandi"
                android:textAlignment="textStart"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/kata_sandi_harus_min_8_karakter_dengan_min_1_angka"
                android:textAlignment="textStart" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_17sdp"
                android:text="@string/kata_sandi_lama"
                android:textAlignment="textStart"
                android:textColor="@color/colorBlack" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_5sdp"
                android:background="@drawable/custom_background_edit_text"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_17sdp"
                android:text="@string/kata_sandi_baru"
                android:textAlignment="textStart"
                android:textColor="@color/colorBlack" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_5sdp"
                android:background="@drawable/custom_background_edit_text"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_17sdp"
                android:text="@string/konfirmasi_kata_sandi_baru"
                android:textAlignment="textStart"
                android:textColor="@color/colorBlack" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_5sdp"
                android:background="@drawable/custom_background_edit_text"
                android:inputType="textPassword" />


        </LinearLayout>


    </ScrollView>

    <Button
        android:id="@+id/buttonSimpanKataSandi"
        android:layout_width="@dimen/_125sdp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_50sdp"
        android:background="@drawable/background_button_1"
        android:text="@string/simpan"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>